<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_buy"
            android:title="@string/menu_buy" />
        <item
            android:id="@+id/nav_sell"
            android:title="@string/menu_sell" />
        <item
            android:id="@+id/nav_rent"
            android:title="@string/menu_rent" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_contact"
                android:title="@string/menu_contact" />
        </menu>
    </item>
    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
